fmt; +fr: & it:; +etym for proper n <hamburger#36248>

--- a/wiki/hamburger.wikitext
+++ b/wiki/hamburger.wikitext
@@ -1,33 +1,82 @@
+==English==
 ===Etymology===
-:From German ''Hamburger'', one from Hamburg.
+[[w:Hamburg|Hamburg]] + [[-er]]
+
+===Proper noun===
+'''Hamburger''' (''plural'' '''Hamburgers''')
+
+# A person from [[Hamburg]].
+
+===Etymology===
+From German ''Hamburger'', a person from Hamburg.
 
 ===Noun===
 '''hamburger''' (plural: [[hamburgers]])
 
-# A [[sandwich]] consisting of a [[patty]] of cooked [[ground]] [[beef]] in a sliced [[bun]], optionally with [[condiment]]s added.
-# (''Aus'') A meat patty, especially beef, and especially of the type usually used in a hamburger (1).
-# Ground beef, especially that intended to be made into hamburgers.
+#A [[sandwich]] consisting of a [[patty]] of cooked [[ground]] [[beef]] in a sliced [[bun]], sometimes also containing [[salad]] vegetables, [[condiment]]s, or both.
+#The patty used in such a sandwich.<!--(Aus) I don't think this is particularly Australian-->
+#Ground beef, especially that intended to be made into hamburgers.
 
 ====Synonyms====
-*[[burger]] (1, ''Aus'')
-*[[hamburger patty]] (2)
+*(''sandwich''): [[beefburger]], [[burger]]
+*(''patty'') [[hamburger patty]]
 
-====Related terms====
-*[[beef burger]], [[beefburger]]
-*[[chicken burger]]
-*[[fish burger]]
-*[[cheese burger]]
+====Derived terms====
+*[[chicken burger]], [[chickenburger]]
+*[[fish burger]], [[fishburger]]
+*[[cheese burger]] [[cheeseburger]]
 
 ====Translations====
+
+'''sandwich'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
 *Dutch: hamburger
+*French: hamburger ''m''
+*Italian: hamburger ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
 *Spanish: [[hamburguesa]] ''f''
+|}
+|}
 
-===Proper Noun===
-'''Hamburger'''
+'''patty'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+*French: hamburger ''m''
+*Italian: hamburger ''m''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
-# A person from [[Hamburg]].
+'''ground beef'''
+{| border=0  width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from A to I here-->
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--Put translations for languages from J to Z here-->
+|}
+|}
 
 ===See also===
 *[[berliner]]
 *[[frankfurter]]
-*[[en:hamburger|Wikipedia article on hamburger]]
+*[[w:hamburger|Wikipedia article on the hamburger]]
