--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -58,6 +58,7 @@
 {|
 <!--Put translations for languages from A to I here-->
 *Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
+*Bulgarian: [[жалко същество]] (žalko säštestvo) ''n''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
 |}
 | width=1% |
