--- a/wiki/scarab.wikitext
+++ b/wiki/scarab.wikitext
@@ -1,13 +1,15 @@
-=English=
-
-==Noun==
+==English==
+===Noun===
+'''scarab'''
 
 # A type of [[beetle]] belonging to the [[family]] [[w:Scarabaeidae|Scarabaeidae]], especially the species ''Scarabaeus sacer'', [[sacred]] to the ancient [[Egyptian]]s.  
 # A [[symbol]], [[seal]], [[amulet]], or [[gem]] fashioned to [[resemble]] the sacred beetle.
 
-===See Also===
+====Synonyms====
+*[[dung beetle]]
+*[[cockchafer]]
+*[[June bug]]
+
+====Derived terms====
 *[[scarabaeid]]
 *[[scarabaeoid]]
-*[[dung beetle]]
-*[[June bug]]
-*[[cockchafer]]
