--- a/wiki/A-bomb.wikitext
+++ b/wiki/A-bomb.wikitext
@@ -8,7 +8,7 @@
 #An [[atomic bomb]]; a weapon that derives its energy from [[nuclear reaction]]s and has enormous destructive power.
 
 ====Synonyms====
-a small child with a yoyo.
+*[[atom bomb]], [[atomic bomb]], [[fission bomb]], [[nuclear bomb]], [[nuke]] (''slang'')
 
 ====Translations====
 *Hebrew: [[פצצה אטומית|פְּצָצָה אֲטוֹמִית]] ''f''
