fmt; fix wikipedia link <prion#50601>

--- a/wiki/prion.wikitext
+++ b/wiki/prion.wikitext
@@ -1,14 +1,14 @@
-=English=
-
-==Noun==
+==English==
+===Noun===
+'''prion'''
 
 #A [[cell membrane]] [[protein]] found on all [[mammal]]ian [[cell]]s, notably [[immune cell]]s and [[neuron]]s.  The [[etiologic]] [[agent]] of [[transmissible spongiform encephalopathy|transmissible spongiform encephalopathies]]. The only [[self-replicating]] cause of [[disease]] known to lack [[nucleic acid]]s.
 
-===Translations===
+====Translations====
 *Finnish: [[prioni]]
 
 ===See Also===
-*Wikipedia: [[w:prion|prion]]
+*[[w:prion|Wikipedia article on prions]]
 *[[Cruetzfeld-Jakob Disease]]
 *[[New Variant Cruetzfeld-Jakob Disease]]
 *[[Mad Cow Disease]]
