/* Translations */ balance columns <worm#39482>

--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -17,7 +17,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *Arabic: [[دودة|دُودَة]] (dúda) ''sg'', [[دود|دُودٌ]] (dúdun) ''pl''
 *[[Bosnian]]: [[crv]] ''m''
 *Bulgarian: [[червей]] (červej)
@@ -31,13 +31,13 @@
 *Greek: [[σκώληξ]] (skólix) ''m''
 *Hebrew: [[תולע]] (tolah) ''m''
 *Hungarian: [[kukac]]
-*Indonesian: [[cacing]]
-*Italian: [[verme]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
+*Indonesian: [[cacing]]
+*Italian: [[verme]] ''m''
 *Japanese: [[虫]] ([[むし]], mushí)
 *Korean: [[벌레]] (beolle)
 *Latin: [[vermis]] ''m''
@@ -56,16 +56,16 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
 *Bulgarian: [[жалко същество]] (žalko säštestvo) ''n''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
+*Portuguese: [[miserável]] ''m and f'', [[desgraçado]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
-*Portuguese: [[miserável]] ''m and f'', [[desgraçado]] ''m''
+<!--right column-->
 *Russian: [[стерва]] (stérva) ''m and f'', [[негодяй]] (negodjáj) ''m'', [[негодяйка]] (negodjájka) ''f''
 *Spanish: [[gusano]] ''m''
 |}
@@ -76,14 +76,14 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from A to I here-->
+<!--left column-->
 *French: [[ver]] ''m''
-*Italian: [[verme]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-<!--Put translations for languages from J to Z here-->
+<!--right column-->
+*Italian: [[verme]] ''m''
 |}
 |}
 
