fmt; +en: entry <circa#58279>

--- a/wiki/circa.wikitext
+++ b/wiki/circa.wikitext
@@ -1,1 +1,19 @@
-''Latin'': Approximately or about.
+==English==
+===Etymology===
+Latin ''circa'', about
+
+===Preposition===
+'''''circa'''''<!--italic bold, because this is not a naturalised word-->
+
+#[[Approximately]], [[about]].  Abbreviation: '''''[[ca.]]''''' or '''''[[ca]]'''''
+#:''Julius Caesar visited this area'' ca. ''50 BC''
+
+====Usage note====
+*Used only before dates.
+
+----
+==Latin==
+===Preposition===
+'''circa'''
+
+#[[about]]
