fmt; +en: entry <circa#58279>

--- a/wiki/circa.wikitext
+++ b/wiki/circa.wikitext
@@ -5,7 +5,7 @@ Latin ''circa'', about
 ===Preposition===
 '''''circa'''''<!--italic bold, because this is not a naturalised word-->
 
-#[[Approximately]], [[about]].  Abbreviation: '''''[[ca.]]''''' or '''''[[ca]]'''''
+#[[Approximately]], [[about]].  Abbreviation: '''''[[ca.]]''''' or '''''[[ca.|ca]]'''''
 #:''Julius Caesar visited this area'' ca. ''50 BC''
 
 ====Usage note====
