/* Translations to be checked */ improve zh <translation#2679>

--- a/wiki/translation.wikitext
+++ b/wiki/translation.wikitext
@@ -92,7 +92,7 @@ The translations below need to be checked by native speakers and inserted into t
 *[[Breton]]: [[troidigezh]] ''f'' -ioù ''pl'' (1,2)
 *Bulgarian: [[превеждане]] ''n'' (1), [[превод]] ''m'' (2), [[предаване]] ''n'' (3)
 *[[Catalan]]: [[traducció]] ''f''
-*Chinese: [[翻譯]]/[[翻译]] (fan1yi4)
+*Chinese: [[翻譯]], [[翻译]] (fānyì)
 *Dutch: [[vertaling]] ''f''
 *[[Esperanto]]: [[traduko]]
 *[[Frisian]]: [[oersetting]]
