--- a/wiki/ca..wikitext
+++ b/wiki/ca..wikitext
@@ -2,7 +2,10 @@
 ===Abbreviation===
 '''ca.'''
 
-====Variant spellings====
-'''ca'''
+====Variant forms====
+'''c.''', '''ca'''
 
 #[[Circa]].
+
+===Quotations===
+*'''2004''' During glacial times, a stretch of level plain joined Australia with New Guinea and enabled humans to walk into Australia. That plain flooded to form the Gulf of Carpentaria, between ''ca'' 12,000 and 10,000 ybp. - Wikipedia article on [[wikipedia:Deluge_(mythology)|Deluge (mythology)]]
