--- a/wiki/%E8%AF%91.wikitext
+++ b/wiki/%E8%AF%91.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#translate
-*# decode
-*# encode
-
+*#[[translate]]
+*# [[decode]]
+*# [[encode]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
