amended etym to what was on page for "ca." <circa#58279>

--- a/wiki/circa.wikitext
+++ b/wiki/circa.wikitext
@@ -1,6 +1,6 @@
 ==English==
 ===Etymology===
-Latin ''circa'', about
+Latin ''circum'', around
 
 ===Preposition===
 '''''circa'''''<!--italic bold, because this is not a naturalised word-->
