improve alt forms; +ko compound <飜#31333>

--- a/wiki/%E9%A3%9C.wikitext
+++ b/wiki/%E9%A3%9C.wikitext
@@ -1,4 +1,5 @@
-* '''Alternate form''': [[翻]]
+* '''Alternate forms''':
+** [[翻]] (Traditional & Simplified Chinese, Japanese)
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 183''': [[Wiktionary:Chinese radical index 飛|飛]]+12 strokes
 
@@ -52,6 +53,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': beon
 ** '''[[McCune-Reischauer]]''': pŏn
 ** '''[[Yale]]''': pen
+
+* '''Compounds''': 
+** [[飜譯]] (번역, beonyeok)
 
 ----
 
