improve alt forms; +ja compound <訳#26923>

--- a/wiki/%E8%A8%B3.wikitext
+++ b/wiki/%E8%A8%B3.wikitext
@@ -1,4 +1,6 @@
-* '''Alternate form''': [[譯]]
+* '''Alternate forms''':
+** [[譯]] (Traditional Chinese)
+** [[译]] (Simplified Chinese)
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 149''': [[Wiktionary:Chinese radical index 言|言]]+4 strokes
 
@@ -16,7 +18,6 @@
 *#[[translate]]
 *# [[decode]]
 *# [[encode]]
-
 
 ----
 
@@ -41,6 +42,9 @@
 * '''Readings'''
 ** '''[[On]]''': [[やく]] (yaku), [[えき]] (eki)
 ** '''[[Kun]]''': [[わけ]] (wake), [[とく]] (toku)
+
+* '''Compounds''':
+** [[翻訳]] (ほんやく, hon-yaku)
 
 * '''Other info''':  
 
