--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -39,7 +39,7 @@
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m''
 *Japanese: [[虫]] ([[むし]], mushí)
-*Korean: [[벌레]] (beolle)
+*Korean: [[벌레]] (peolre)
 *Latin: [[vermis]] ''m''
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
 *Polish: [[robak]]
@@ -60,6 +60,7 @@
 *Arabic: [[شخص دنيء|شَخْصٌ دَنِيء]] (šáχʂun dániʔ) ''m''
 *Bulgarian: [[жалко същество]] (žalko säštestvo) ''n''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
+*Korean: [[비열한 인간]] (piyeolhan ingan)
 *Portuguese: [[miserável]] ''m and f'', [[desgraçado]] ''m''
 |}
 | width=1% |
