--- a/wiki/%E7%BF%BB%E8%AD%AF.wikitext
+++ b/wiki/%E7%BF%BB%E8%AD%AF.wikitext
@@ -1,1 +1,9 @@
-'''Bold text'''joyeux noël
+==Chinese==
+===Noun===
+'''[[翻]][[譯]]''' (fānyì; traditional; simplified: [[翻译]])
+
+# [[translation]]
+
+===See also===
+*[[翻訳]] (Japanese: ほんやく, hon-yaku) 
+*[[飜譯]] (Korean: 번역, beonyeok)
