improve alt forms; wikification; +compounds <譯#27261>

--- a/wiki/%E8%AD%AF.wikitext
+++ b/wiki/%E8%AD%AF.wikitext
@@ -1,4 +1,6 @@
-* '''Alternate forms''': [[訳]], [[译]]
+* '''Alternate forms''':
+** [[译]] (Simplified Chinese)
+** [[訳]] (Japanese)
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 149''': [[Wiktionary:Chinese radical index 言|言]]+13 strokes
 
@@ -13,14 +15,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#translate
-*# decode
-*# encode
-
+*#[[translate]]
+*# [[decode]]
+*# [[encode]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,11 +36,14 @@
 * '''Style''': [[Traditional Chinese]] 
 ** '''[[Simplified Chinese|Simplified]] equivalent''': [[译]]
 
+* '''Compounds''':
+** [[翻譯]] ([[翻译]], fānyì)
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[やく]] (yaku), [[えき]] (eki)
@@ -49,9 +53,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 역
+* '''[[Hangeul]]''': [[역]]
 
 * '''[[Eumhun]] reading''': 
 
@@ -59,6 +63,9 @@
 ** '''[[The 2000 South Korean Revised Romanization|The 2000 South Korean Revised]]''': yeok
 ** '''[[McCune-Reischauer]]''': yŏk
 ** '''[[Yale]]''': eyk
+
+* '''Compounds''':
+** [[飜譯]] ([[번역]], beonyeok)
 
 ----
 
