improve alt forms; +compounds; wikification; is 繙 really a variant?? <翻#24082>

--- a/wiki/%E7%BF%BB.wikitext
+++ b/wiki/%E7%BF%BB.wikitext
@@ -1,4 +1,6 @@
-* '''Alternate form''': [[繙]]
+* '''Alternate forms''':
+** [[飜]] (Korean Hanja)
+** [[繙]]<!-- really a variant? -->
 
 * '''[[Wiktionary:Chinese radical index| Radical]] Number 124''': [[Wiktionary:Chinese radical index 羽|羽]]+12 strokes
 
@@ -12,11 +14,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': flip over, upset, capsize
+* '''Common Meaning''': [[flip over]], [[upset]], [[capsize]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -28,23 +30,29 @@
 *** '''[[Penkyamp]]''': 
 *** '''[[Yale]]''': faan1
 
+* '''Compounds''':
+** [[翻譯]], [[翻译]] (fānyì)
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[ほん]] (hon), [[はん]] (han)
 ** '''[[Kun]]''': [[ひるがえる]] (hirugaeru), [[とる]] (toru), [[ひるがえす]] (hirugaesu)
 
+* '''Compounds''':
+** [[翻訳]] (ほんやく, hon-yaku)
+
 * '''Other info''':  
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 번
+* '''[[Hangeul]]''': [[번]]
 
 * '''[[Eumhun]] reading''': 
 
