fmt + quotes <despairer#63960>

--- a/wiki/despairer.wikitext
+++ b/wiki/despairer.wikitext
@@ -1,2 +1,8 @@
-==Noun== 
-One who [[despair]]s.
+=={{en}}==
+===Noun=== 
+# One who [[despair]]s.
+
+===Quotations===
+*'''1666''': He cheers the fearful, and commends the bold, / And makes '''despairers''' hope for good success. &mdash; John Dryden, ''Annus Mirabilis: The Year of Wonders, 1666''
+*'''1866''': Too quick '''despairer''', wherefore wilt thou go? &mdash; Matthew Arnold, ''Thrysis A Monody''
+*'''1892?''': O '''despairer''', here is my neck &mdash; Walt Whitman, ''Leaves of Grass''
