--- a/wiki/%E7%B9%99.wikitext
+++ b/wiki/%E7%B9%99.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#to interpret
-*# to flap, flutter in the wind
-
+*#to [[interpret]]
+*# to [[flap]], [[flutter]] in the wind
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +34,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[はん]] (han), [[ほん]] (hon)
@@ -45,9 +44,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 번
+* '''[[Hangeul]]''': [[번]]
 
 * '''[[Eumhun]] reading''': 
 
