+foreign-language entries <soap#54875>

--- a/wiki/soap.wikitext
+++ b/wiki/soap.wikitext
@@ -93,3 +93,24 @@
 *[[w:soap|Wikipedia article on soap]]
 *[[w:Simple_Object_Access_Protocol|Wikipedia article on SOAP]]
 *[http://www.w3.org/TR/soap/ W3 SOAP specifications] <!-- I don't think the "do not link" warning on this page is relevant here -->
+
+----
+==Dutch==
+===Noun===
+'''soap''' ''f''
+
+#[[soap opera]], soap
+
+----
+==French==
+===Noun===
+'''soap''' ''m''
+
+#[[soap opera]], soap
+
+----
+==German==
+===Noun===
+'''Soap''' ''f''
+
+#[[soap opera]], soap
