--- a/wiki/bus.wikitext
+++ b/wiki/bus.wikitext
@@ -26,6 +26,7 @@ Contraction of '''[[omnibus]]''', from Latin '''[[omnibus]]''', meaning ''"for e
 *[[Interlingua]]: [[omnibus]], [[autobus]], bus (1)
 *Italian: [[autobus]] ''m'' (1), [[pullman]] ''m'' (1), [[corriera]] ''f'' (1)
 *Korean: [[버스]] (beoseu, South Korea, 1), [[뻐스]] (ppeoseu, North Korea, 1)
+*Lithuanian: [[autobusas]] ''m'' (1); [[šyna]] ''f'' (2); [[magistralė]] ''f'' (3)
 *Polish: [[autobus]] ''m'' (1 city transport), [[autokar]] ''m'' (1), [[szyna]] ''f'' (2,3), [[magistrala]] ''f'' (3)
 *Portuguese: [[ônibus]] ''m'' (1), [[barramento]] ''m'' (2)
 *Romanian: [[autobuz]] ''n'' (1), [[magistrală]] ''f'' (2)
