--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -34,6 +34,7 @@ From Latin ''[[aero-]]'', combining form for '''air''' + Latin ''[[planum]]'', '
 *Italian: [[aereo]] ''m''
 *Japanese: [[飛行機]] ([[ひこうき]], hikōki), [[航空機]] ([[こうくうき]], kōkuuki)
 *Latin: [[aeroplanum]]
+*Lithuanian: [[lėktuvas]] ''m'', [[aeroplanas]] ''m'' (archaic)
 *Persian: [[هَواپَيما]] (hævāpeymā)
 *Polish: [[samolot]]
 *Portuguese: [[avião]] ''m'', [[aeroplano]] ''m''
