--- a/wiki/exobiology.wikitext
+++ b/wiki/exobiology.wikitext
@@ -4,4 +4,5 @@ The branch of [[biology]] dealing with [[extraterrestrial]] [[lifeforms]].
 
 ===Translation===
 *[[German]]: [[Exobiologie]] ''f''
+*[[Lithuanian]]: [[egzobiologija]] ''f''
 *[[Romanian]]: [[exobiologie]]
