--- a/wiki/dog.wikitext
+++ b/wiki/dog.wikitext
@@ -158,6 +158,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*[[Lithuanian]]: [[šuo]] ''m''
 *{{sl}}: [[pes]] ''m''
 *{{es}}: [[perro]] ''m''
 |}
