--- a/wiki/energy.wikitext
+++ b/wiki/energy.wikitext
@@ -12,6 +12,7 @@
 *[[Interlingua]]: [[energia]]
 *[[Italian]]:  [[energia]] ''f'' 
 *[[Japanese]]: [[エネルギー]] (enerugī)
+*[[Lithuanian]]: [[energija]] ''f''
 *[[Polish]]: [[energia]] ''f''
 *[[Portuguese]]: [[energia]] ''f''
 *[[Romanian]]: [[energie]] ''f''
