--- a/wiki/influence.wikitext
+++ b/wiki/influence.wikitext
@@ -1,3 +1,6 @@
 The word '''influence''' actually comes from the [[latin]] word ''influentia'' which was used about stellar ([[astrology|astrological]]) effects on humans, caused by the stars. Nowadays, it is used for any general cases where distant effects of some sort may be manifest.
 
+====Translations====
+*Lithuanian: [[įtaka]] ''f''
+
 See also: [[influenza]]
