--- a/wiki/influenza.wikitext
+++ b/wiki/influenza.wikitext
@@ -13,5 +13,6 @@
 *Finnish: [[influenssa]]
 *French: [[grippe]] ''f''
 *German: [[Grippe]] ''f''
+*Lithuanian: [[gripas]] ''m''
 *Slovak: [[chrípka]] ''f''
 *Swedish: [[influensa]] ''c'', [[flunsa]] ''c''
