--- a/wiki/place.wikitext
+++ b/wiki/place.wikitext
@@ -10,6 +10,7 @@
 
 ====Translations====
 *[[German]]: [[:de:Platz|Platz]] (1); [[:de:Ort|Ort]], [[:de:Position|Position]] (3)
+*Lithuanian: [[aikštė]] ''f'' (1); [[vieta]] ''f'' (3)
 
 ===Verb, transitive===
 
