--- a/wiki/length.wikitext
+++ b/wiki/length.wikitext
@@ -8,5 +8,6 @@
 *Finnish: [[pituus]] (1)
 *German: [[Länge]] ''f'' (1), [[Pferdelänge]] ''f'' (2)
 *{{ga}}: [[fad]]
+*Lithuanian: [[ilgis]] ''m''; [[ilgumas]] ''m''
 *Polish: [[długość]] ''f''
 *Slovak: [[dĺžka]] ''f'' (1)
