--- a/wiki/width.wikitext
+++ b/wiki/width.wikitext
@@ -1,5 +1,8 @@
 ===Noun===
 '''width'''
 
+====Translations====
+*Lithuanian: [[plotis]] ''m'', [[platumas]] ''m''
+
 ====Related terms====
 *[[wide]]
