Headings revised <أنا#33609>

--- a/wiki/%D8%A3%D9%86%D8%A7.wikitext
+++ b/wiki/%D8%A3%D9%86%D8%A7.wikitext
@@ -1,20 +1,19 @@
-=(Arabic)=
-==Alternative spellings==
+==Arabic==
+===Alternative spellings===
 انا، أَنَا: 'anaa, ana (I)
 ـني، ـنِي: -nii, ni (me)
 ـي، ـِي، ـيَ: -ii, i (my)
-==Etymology==
+===Etymology===
 أَنَا from Proto-Semitic *'anaak-, ultimately Afro-Asiatic (with cognates in Berber nekk, Egyptian jnk (Coptic anok), etc.)
-==Pronunciation==
+===Pronunciation===
 IPA: /ʔanaː/ [ʔɛnɛː]
 /-niː/
 /-iː/ (after long vowels /-ja/)
-==Part of Speech==
+==Pronoun==
 Subject pronoun.
-====Definition====
-أَنَا I.
-ـنِي me.
-ـِي my.
+#أَنَا I.
+#ـنِي me.
+#ـِي my.
 ====Translations====
 # The first person, '''I''' refers to the speaker.
 #:'''Translations'''
