--- a/wiki/inch.wikitext
+++ b/wiki/inch.wikitext
@@ -15,6 +15,7 @@
 *German: [[Zoll]] ''n'' (1, 2)
 *Italian: [[pollice]] ''m'' (1)
 *Japanese: [[インチ]] (1)
+*Lithuanian: [[colis]] ''m''
 *Polish: [[cal]] ''m'' (1), [[milimetr]], [[włos]] ''m'' (2)
 *Romanian: [[ţol]] ''m'' (1)
 *Russian: [[дюйм]] ''m'' (1)
