--- a/wiki/meter.wikitext
+++ b/wiki/meter.wikitext
@@ -15,6 +15,7 @@
 *Greek: [[metro]]
 *Italian: [[metro]]
 *Latin: [[metro]]
+*Lithuanian: [[metras]] ''m''
 *Romanian: [[metru]] ''m'' (1,2), [[contor]] ''n'' (2)
 *Slovak: [[meter#Slovak|meter]] ''m'' (3)
 *Spanish: [[metro]] ''m'' (1), [[medidor]] ''m'' (2), [[contador]] ''m'' (2)
