--- a/wiki/height.wikitext
+++ b/wiki/height.wikitext
@@ -1,6 +1,9 @@
 ===Noun===
 '''height'''
 
+====Translations====
+*Lithuanian: [[aukštis]] ''m'', [[aukštumas]] ''m''
+
 ====Antonyms====
 *[[depth]]
 
