--- a/wiki/depth.wikitext
+++ b/wiki/depth.wikitext
@@ -11,5 +11,6 @@
 *French: [[profondeur]] ''f''
 *German: [[Tiefe]] ''f''
 *Indonesian: [[dalam|kedalaman]]
+*Lithuanian: [[gylis]] ''m'', [[gilumas]] ''m''
 *Japanese: [[深さ]] ([[ふかさ]], fukasa)
 *Spanish: [[profundidad]] ''f''
