--- a/wiki/encyclopedia.wikitext
+++ b/wiki/encyclopedia.wikitext
@@ -37,6 +37,7 @@ Encyclopedia \En*cy`clo*pe"di*a\, Encyclopaedia
 <!--languages from J to Z go here-->
 *Japanese: [[大辞典]] (だいじてん, dai-jiten)
 *Latin: [[encyclopaedia]]
+*Lithuanian: [[enciklopedija]] ''f''
 *Polish: [[encyklopedia]] ''f''
 *Portuguese: [[enciclopédia]] ''f''
 *Romanian: [[enciclopedie]] ''f''
