--- a/wiki/silence.wikitext
+++ b/wiki/silence.wikitext
@@ -32,6 +32,7 @@ See Also: [[quiet]], [[noise]], [[loud]], [[deaf]], [[audible]].
 *[[Old English]]: -
 *Korean: -
 *Latvian: -
+*Lithuanian: [[tyla]] ''f'' (noun) 
 *Spanish: silencio [[:es:silencio|(es)]] ''f.''
 *Swedish: -
 *Turkish: -
