--- a/wiki/loud.wikitext
+++ b/wiki/loud.wikitext
@@ -32,6 +32,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[garsus]] ''m'', [[garsi]] ''f'', [[garsu]] ''n''
 *Portuguese: [[alto#Portuguese|alto]] ''m'', alta ''f''
 *Spanish: [[fuerte]] ''m and f''
 |}
@@ -62,6 +63,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[rėksmingas]] ''m'', [[rėksminga]] ''f''
 *Portuguese: [[berrante]]
 *Spanish: [[chillón]] ''m'', [[chillona]] ''f''
 |}
