--- a/wiki/stalk.wikitext
+++ b/wiki/stalk.wikitext
@@ -31,7 +31,7 @@
 *Chinese: [[偷偷靠近]]
 *Dutch: [[besluipen]]
 *French: [[égrapper]]
-*German: [[sich anzupirschen]]
+*German: [[sich anpirschen]]
 *Greek: [[καταδιώξει]]
 *Italian: [[inseguire]]
 *Spanish: [[acechar]]
