--- a/wiki/anger.wikitext
+++ b/wiki/anger.wikitext
@@ -14,4 +14,5 @@ IPA: [[WEAE]] /ˈæŋ.ɚ/
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
 ====Translations====
-{{pl}}: [[złość]] ''f'', [[gniew]] ''m''
+*{{pl}}: [[złość]] ''f'', [[gniew]] ''m''
+*Lithuanian: [[pyktis]] ''m''
