--- a/wiki/noise.wikitext
+++ b/wiki/noise.wikitext
@@ -16,5 +16,6 @@ See also: [[sound]], [[bang]], [[boom]], [[crash]], [[thud]].
 *[[Breton]]: [[trouz]] ''m'' -où ''pl''
 *German: [[Lärm]] ''m'' (1), [[Rauschen]] ''n'' (2-3)
 *Hebrew: [[רעש]] ''m''
+*Lithuanian: [[triukšmas]] ''m''
 *Polish: [[hałas]] ''m'' (1), [[szum]] ''m'' (1-3)
 *[[Tok Pisin]]: [[meknais]]
