--- a/wiki/signal.wikitext
+++ b/wiki/signal.wikitext
@@ -18,6 +18,7 @@
 
 ====Translations====
 *Chinese Characters: [[旌]]
+*Lithuanian: [[signalizuoti]]
 *Russian: [[сигнализировать]]
 
 ===Related terms===
