--- a/wiki/loud.wikitext
+++ b/wiki/loud.wikitext
@@ -25,6 +25,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Dutch: [[luid]], [[luide]], [[hard]], [[harde]]
 *French: [[fort#French|fort]] ''m'', forte ''f''
 *German: [[laut]]
 *Italian: [[forte#Italian|forte]] ''m and f''
@@ -43,6 +44,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Dutch: [[luidruchtig]], [[luidruchtige]]
 *French: [[bruyant]] ''m'', bruyante ''f''
 |}
 | width=1% |
@@ -78,4 +80,4 @@
 ===Adverb===
 '''loud''' (''[[comparative]]'' '''louder''', ''[[superlative]]'' '''loudest''')
 
-#[[Loudly]].
+#[[loudly]].
