--- a/wiki/ship.wikitext
+++ b/wiki/ship.wikitext
@@ -22,6 +22,7 @@ From Middle English, from Old English [[scip]].
 *Italian: [[nave]] ''f''
 *Japanese: [[船]]
 *Korean: [[배]]
+*Lithuanian: [[laivas]] ''m''
 *Persian: [[كشتی]] (keshti)
 *Polish: [[statek]] ''m'' , [[okręt]] ''m''
 *Portuguese: [[navio]] ''m''
