nl+ <coconut milk#50543>

--- a/wiki/coconut_milk.wikitext
+++ b/wiki/coconut_milk.wikitext
@@ -7,6 +7,7 @@
 #:It is commonly used in South East Asian cooking for its aromatic property in curry and other gravy.
 
 ===Translations===
+*Dutch: [[kokosmelk]] ''f''
 *Lithuanian: [[kokoso pienas]] ''m''
 *{{msg:de}}: [[Kokosmilch]] [[:de:Kokosmilch|^]] ''f''
 *Swedish: [[kokosmjölk]]
