--- a/wiki/school.wikitext
+++ b/wiki/school.wikitext
@@ -35,6 +35,7 @@
 *[[Irish]]: [[scoil]]
 *Italian: [[scuola]] ''f'' (1), [[università]] ''f'' (2)
 *Japanese: [[学校]] ([[がっこう]], gakkou)
+*Lithuanian: [[mokykla]] ''f'' (1-4)
 *Polish: [[szkoła]] ''f''
 *Portuguese: [[escola]] ''f'' (1, 2, 3, 4); [[cardume]] ''m'' (5)
 *Romanian: [[şcoală]] ''f'' (1-4)
