--- a/wiki/college.wikitext
+++ b/wiki/college.wikitext
@@ -15,6 +15,7 @@
 ====Translations====
 *Finnish: [[opisto]] (2), [[oppilaitos]] (2), [[yliopiston osa]] (4, 7), [[yliopisto]] (5), [[korkeakoulu]] (5)
 *[[Interlingua]]: [[collegio]]
+*Lithuanian: [[koledžas]] ''m'' (1-4, 6, 7), [[kolegija]] ''f'' (institution of higher vocational education in Lithuania)
 *Persian: [[آموزشگاه]] (amuzeshgah) (1-3), [[دانشكده]] (daneshkadeh) (4-7)
 *Portuguese: [[colégio]] ''m''
 *[[Slovak]]: [[vysoká škola]] ''f''
