--- a/wiki/philosophy.wikitext
+++ b/wiki/philosophy.wikitext
@@ -16,4 +16,5 @@ from Greek (philosophia): philos = love
 
 *[[Finnish]]: [[filosofia]]
 *[[German]]: [[Philosophie]]
+*[[Lithuanian]]: [[filosofija]] ''f''
 *[[Swedish]]: [[filosofi]]
