--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -76,7 +76,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *[[Javanese]]: [[banyu]]
 *Latin: [[aqua]]
 *Latvian: [[ūdens]]
-*Lithuanian: [[vanduo]] 
+*Lithuanian: [[vanduo]] ''m''
 *Malay: [[air#Malay|air]]
 *Maltese: [[ilma]]
 *[[Manchu]]: [[muke]]
@@ -151,6 +151,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 {|
 <!--languages from J to Z go here-->
 |}
+*Lithuanian: [[vanduo]] ''m''
 |}
 
 '''waters: sea belonging to a particular country'''
