--- a/wiki/air.wikitext
+++ b/wiki/air.wikitext
@@ -47,6 +47,7 @@
 *Japanese: [[空気]] (くうき, kūki)
 *Korean: [[공기]] [空氣] (gonggi)
 *Latin: [[aer]]
+*Lithuanian: [[oras]] ''m''
 *Malay: [[udara]]
 *Persian: [[هَوا]] (hævā)
 *Polish: [[powietrze]] ''n''
@@ -71,6 +72,7 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
+*Lithuanian: [[oras]] ''m''
 *Swedish: [[luft]] ''c''
 |}
 |}
