--- a/wiki/Rhamnus_cathartica.wikitext
+++ b/wiki/Rhamnus_cathartica.wikitext
@@ -1,12 +1,7 @@
-=Noun=
-
-The Rhamnus catharticus, also known as Buckthorn, is an up to 3 meters tall shrub native to northern Europe. Its pea like berries are first green and turn black later. They are used in medicine. 
-
-=Other names=
-Buckthorn, Rhamnus cathartica
-
-=Translations=
+===Noun===
+''[[Rhamnus]] [[catharticus]]''
+*Buckthorn, a species of shrub up to 3 meters tall shrub native to northern Europe. Its pea like berries are first green and turn black later. 
+===Translations===
 * German: [[Kreuzdorn]]
-
-=See Also=
-* Wikipedia on [[w:Buckthorn]]
+===See also===
+* [[w:Buckthorn]]
