--- a/wiki/land.wikitext
+++ b/wiki/land.wikitext
@@ -12,8 +12,10 @@
 *Finnish: [[maa]] (1,2,3)
 *German: [[Land]] ''n'' (1,2,3)
 *Greek (Ancient): [[γῆ]] ''f''
+*Lithuanian: [[sausuma]] ''f'' (1); [[žemė]] ''f'' (2); [[kraštas]] ''m'' (3)
 *Spanish: [[tierra]] ''f''
 *Hebrew: [[ארץ]] ''f'', [[אדמה]] ''f''
+
 ===Intransitive verb===
 '''to land'''
 
