--- a/wiki/bubble.wikitext
+++ b/wiki/bubble.wikitext
@@ -28,6 +28,7 @@
 *German: [[Blase]] ''f''
 *Indonesian: [[gelembung]]
 *Japanese: [[泡]] ([[あわ]], awa), [[バブル]] (baburu)
+*Lithuanian: [[burbulas]] ''m''
 *Swedish: [[bubbla]] ''c''
 
 ===Intransitive verb===
