--- a/wiki/archipelago.wikitext
+++ b/wiki/archipelago.wikitext
@@ -7,6 +7,8 @@ From Greek '''archi''' + Latin '''pelago'''
 # something scattered around like an archipelago (1)
 #: ''Archipelago Gulag'''
 ==== Translations ====
+*Lithuanian: [[salynas]] ''m'', [[archipelagas]] ''m''
 *Slovak: [[súostrovie#Slovak|súostrovie]] ''n''
+
 === Related Words ===
 * [[archipelagic]]
