marked up a bit, taken out translations <herfst#660>

--- a/wiki/herfst.wikitext
+++ b/wiki/herfst.wikitext
@@ -1,5 +1,3 @@
-'''herfst'''
-
 == Dutch == 
 
 /hERfst/
@@ -9,16 +7,14 @@ From ''[[herfstmaand]]''; related to High German ''[[Herbst]]'', English ''[[har
 
 ===Meanings===
 ====noun====
-''plural'' -en /-@n/
-#traditionally the third of the four [[season]]s, normally on the northern hemisphere from [[September]] 21 to [[December]] 20; [[autumn]], [[fall]].
+'''herfst''' (Plural: [[herfsten]], diminutive: [[herfstje]])
+
+#traditionally the third of the four [[season]]s, normally on the northern hemisphere from [[September]] 21 to [[December]] 20; 
 
 === Usage ===
 The made-up compound noun ''herfstschrik'' (/hERfstsxRIk/, fear of fall?) is used to demonstrate the bewildering number of consonants that can be strung together in Dutch. It is not particularly difficult for a speaker of Dutch to pronounce all consonants, but in practice a few of these will be dropped to something like /hERfsxRIk/.
 
 See also: [[Dutch compound words]]
 
-=== Translations ===
-*de: [[Herbst]]
-*en: [[autumn]], [[fall]]
-*es: [[otoño]]
-*fr: [[automne]]
+====Translations====
+English: [[autumn]], [[fall]]
