cleaned up a bit <Arabian oryx#4123>

--- a/wiki/Arabian_oryx.wikitext
+++ b/wiki/Arabian_oryx.wikitext
@@ -1,10 +1,12 @@
-mammal
+===Noun===
+'''Arabian oryx'''
 
-===Translations===
-*[[Dutch]]: [[Arabische oryx]] ''m'', [[witte oryx]] ''m''
-*[[French]]: [[oryx béatrix]] ''m'', [[oryx d'Arabie]] ''m''
-*[[German]]: [[arabischer Oryx]] ''''
-*[[Latin]]: [[Oryx leucoryx]]
-*[[Spanish]]: [[]] ''''
+# mammal
+
+====Translations====
+*Dutch: [[Arabische oryx]] ''m'', [[witte oryx]] ''m''
+*French: [[oryx béatrix]] ''m'', [[oryx d'Arabie]] ''m''
+*German: [[arabischer Oryx]] ''''
+*Latin: [[Oryx leucoryx]]
 
 [[image:arabian_oryx.jpg]]
