--- a/wiki/Rhamnus_cathartica.wikitext
+++ b/wiki/Rhamnus_cathartica.wikitext
@@ -1,6 +1,6 @@
 ===Noun===
 ''[[Rhamnus]] [[catharticus]]''
-*Buckthorn, a species of shrub up to 3 meters tall shrub native to northern Europe. Its pea like berries are first green and turn black later. 
+#[[buckthorn]], a species of shrub up to 3 meters tall shrub native to northern Europe. Its pea-like berries are first green and turn black later. 
 ===Translations===
 * German: [[Kreuzdorn]]
 ===See also===
