--- a/wiki/key.wikitext
+++ b/wiki/key.wikitext
@@ -46,6 +46,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[raktas]] ''m''
 *Spanish: [[llave]] ''f''
 |}
 |}
@@ -93,6 +94,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[klavišas]] ''m''
 *Spanish: [[tecla]] ''f''
 |}
 |}
@@ -110,6 +112,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--Put translations for languages from J to Z here-->
+*Lithuanian: [[klavišas]] ''m''
 *Spanish: [[tecla]] ''f''
 |}
 |}
@@ -155,6 +158,7 @@
 {|
 <!--Put translations for languages from J to Z here-->
 |}
+*Lithuanian: [[raktas]] ''m''
 |}
 
 '''computing: field of a database constrained to be unique'''
@@ -211,6 +215,7 @@
 {|
 <!--Put translations for languages from J to Z here-->
 |}
+*Lithuanian: approxim. [[salelė]] ''f''
 |}
 
 '''small guide explaining symbols or terminology'''
