--- a/wiki/woman.wikitext
+++ b/wiki/woman.wikitext
@@ -46,6 +46,7 @@
 *Japanese: [[女]] (おんな, onna) / [[女性]] (じょせい, josei)
 *Korean: [[여자]] (yeoja) / [[여성]] (yeosung)
 *Latin: [[femina]] ''f'', [[mulier]] ''f''
+*Lithuanian: [[moteris]] ''f''
 *Norwegian: [[kvinne]]
 *[[Persian]]: [[زَن]] (zæn)
 *Polish: [[kobieta]] ''f''
