--- a/wiki/pleasure.wikitext
+++ b/wiki/pleasure.wikitext
@@ -26,6 +26,7 @@
 *French: [[plaisir]] ''m'' (1)
 *German: [[Vergnügen]] ''m'' (1)
 *Italian: [[piacere]] ''m'' (1)
+*Lithuanian: [[malonumas]] ''m'' (1-4)
 *Portuguese: [[prazer]] ''m'' (1)
 *Russian: [[удовольствие]], [[наслаждение]]
 
