--- a/wiki/pain.wikitext
+++ b/wiki/pain.wikitext
@@ -31,6 +31,7 @@ verb
 * [[Interlingua]]: [[dolor]] 
 * [[Italian]]: [[dolore]] ''m''
 * [[Japanese]]: [[痛み]] ([[いたみ]], itami), [[苦痛]], (くつう, kutsu)
+* [[Lithuanian]]: [[skausmas]] ''m'', also [[kančia]] ''f'', [[gėla]] ''f''
 * [[Persian]]: [[درد]] (dard)
 * [[Polish]]: [[ból]] ''m''
 * [[Portuguese]]: [[dor]] ''f''
