--- a/wiki/refrigerator.wikitext
+++ b/wiki/refrigerator.wikitext
@@ -11,6 +11,7 @@
 *German: [[Kühlraum]] ''m''
 *Italian: [[frigorifero]] ''m''
 *Japanese: [[冷蔵庫]] (れいぞうこ, reizouko)
+*Lithuanian: [[šaldytuvas]] ''m''
 *Polish: [[lodówka]]
 *Portuguese: [[refrigerador]] ''m''
 *{{sk}}: [[ľadnička]] ''f''
