--- a/wiki/fool.wikitext
+++ b/wiki/fool.wikitext
@@ -21,6 +21,7 @@
 *Finnish: [[typerys]], [[hölmö]], [[idiootti]]
 *French: [[imbécile]] ''m'', [[idiot#French|idiot]] ''m''
 *Latin: [[stultus]] ''m''
+*Lithuanian: [[kvailys]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -39,6 +40,7 @@
 *Danish: [[nar]] ''c''
 *Finnish: [[narri]], [[hovinarri]]
 *French: [[fou]] ''m'', [[bouffon]] ''m''
+*Lithuanian: [[juokdarys]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
