--- a/wiki/ambush.wikitext
+++ b/wiki/ambush.wikitext
@@ -10,6 +10,9 @@ IPA: [[WEAE]] /ˈæm.bʊʃ/
 # A concealed station, where troops or enemies lie in wait to attack by surprise.
 <!-- material copied from Webster's Revised Unabridged Dictionary (1913) -->
 
+====Translations====
+*Lithuanian: [[pasala]] ''f''
+
 ===Transitive Verb===
 # To station in ambush with a view to surprise an enemy.
 # To attack by ambush; to waylay.
