--- a/wiki/teacher.wikitext
+++ b/wiki/teacher.wikitext
@@ -9,6 +9,7 @@
 *{{it}}: [[insegnante]] ''m''
 *{{hu}}: [[tanár]], [[tanító]]
 *Latin: [[magister]] ''m'', [[magistra]] ''f''
+*[[Lithuanian]]: [[mokytojas]] ''m'', [[dėstytojas]] ''m''
 *{{pt}}: [[professor#Portuguese|professor]] ''m''
 *{{es}}: [[maestro#Spanish|maestro]] ''m'', [[maestra#Spanish|maestra]] ''f'', [[profesor]] ''m''
 
