--- a/wiki/spam.wikitext
+++ b/wiki/spam.wikitext
@@ -82,6 +82,7 @@ From a [[w:Monty Python|Monty Python]] sketch about the proper noun which featur
 ===Noun===
 '''spam''' (''plural'': spams)
 
+* [http://www.spam-filter-for-outlook.com/ Spam Filter for Outlook]
 
 #spam (''in computing'')
 
