added nl <teacher#48383>

--- a/wiki/teacher.wikitext
+++ b/wiki/teacher.wikitext
@@ -3,9 +3,10 @@
 # A person who [[teach]]es, especially one employed in a [[school]].
 
 ====Translations====
+*{{nl}}: [[leraar]] ''m'', [[lerares]] ''f''
 *{{fi}}: [[opettaja]]
 *{{fr}}: [[professeur]] ''m''
-*{{de}}: [[Lehrer]] ''m''
+*{{de}}: [[Lehrer]] ''m'', [[Lehrerin]] ''f''
 *{{it}}: [[insegnante]] ''m''
 *{{hu}}: [[tanár]], [[tanító]]
 *Latin: [[magister]] ''m'', [[magistra]] ''f''
