general cleanup <bleu#51005>

--- a/wiki/bleu.wikitext
+++ b/wiki/bleu.wikitext
@@ -1,39 +1,33 @@
-[[ca:Bleu]][[da:Bleu]][[de:Bleu]][[fi:bleu]][[fr:Bleu]][[es:bleu]][[ja:bleu]][[nl:Bleu]][[sv:Bleu]]
-=={{fr}}==
-[[Category:French language]]
+==French==
 ===Pronunciation===
 *[[w:IPA|IPA]] /blø/
 
 ===Etymology===
 From [[High German]] ''blao'', brillant
-
 ===Adjective===
 '''bleu''' ''m'' (''f'' [[bleue]], ''m plural'' [[bleus]], ''f plural'' [[bleues]])
-
-
-#[[blue]] [[Category:French colors]]
+#[[blue]] 
 #: ''Le ciel est bleu''. - The sky is blue
-#very [[rare]], [[underdone]] (''of meat'')
-
+#''(of meat):'' very [[rare]], [[underdone]] 
 ===Noun===
 '''bleu''' ''m'' (''plural'' [[bleus]])
-
+#The color [[blue]]
 #[[blue cheese]]
 #:''Le '''bleu''' [[ressembler|ressemble]] à du [[roquefort]]'' - Blue cheese looks like Roquefort
 #[[rookie]], [[new recruit]], [[raw recruit]]
 #:''Ce [[soldat]] est un [[vrai]] [[bleu]]'' - This soldier is a real rookie
 #[[bruise]]
 #:''Il est tombé, et maintenant il a un '''bleu''''' - He fell over and now he has a bruise
-
+#''(Canada):'' a supporter of the Conservative Party
 ====Synonyms====
 *(bruise): [[ecchymose]], [[contusion#French|contusion]]
 
-===Related terms===
+===Derived terms===
 *[[bleuâtre]]
 *[[bleuet]]
 *[[bleuir]]
 *[[bleuissement]]
-*[[bleu marine]]
+*[[bleu marin]]
 *[[bleu roi]]
 *[[bleuté]]
 *[[bleu vert]]
@@ -41,3 +35,6 @@ From [[High German]] ''blao'', brillant
 ===See also===
 *[[turquoise#French|turquoise]]
 *[[outremer]]
+
+[[ca:Bleu]][[da:Bleu]][[de:Bleu]][[fi:bleu]][[fr:Bleu]][[es:bleu]] [[ja:bleu]][[nl:Bleu]][[sv:Bleu]]
+[[Category:French colors]]
