--- a/wiki/bleu.wikitext
+++ b/wiki/bleu.wikitext
@@ -13,7 +13,7 @@ From [[High German]] ''blao'', brillant
 '''bleu''' ''m'' (''plural'' [[bleus]])
 #The color [[blue]]
 #[[blue cheese]]
-#:''Le '''bleu''' [[ressembler|ressemble]] à du [[roquefort]]'' - Blue cheese looks like Roquefort
+#:''Le '''bleu''' [[ressembler|ressemble]] au [[roquefort]]'' - Blue cheese looks like Roquefort
 #[[rookie]], [[new recruit]], [[raw recruit]]
 #:''Ce [[soldat]] est un [[vrai]] [[bleu]]'' - This soldier is a real rookie
 #[[bruise]]
