--- a/wiki/berserk.wikitext
+++ b/wiki/berserk.wikitext
@@ -1,7 +1,17 @@
-==English==
+== English ==
 
-===Noun===
+=== Adjective ===
 
 '''berserk'''
 
-#Alt. of Berserker
+# Injuriously, maniacally, or furiously violent or out of control.
+# (''Informal'') Crazy; unrealistic.
+
+=== Noun ===
+
+'''berserk'''
+
+# Short form of [[berserker]].
+
+==== Translations ====
+*Japanese: [[ベルセルク]] (beruseruku)
