--- a/wiki/square.wikitext
+++ b/wiki/square.wikitext
@@ -25,6 +25,7 @@
 *Finnish: (1): [[neliö]], (4): [[neliö]]
 *French: (1): [[carré]] ''m''; (2): [[équerre]] ''f''; (3): [[place#French|place]] ''f''; (4): carré ''m''
 *German: (1): [[Quadrat]] ''n'' (1), (2): (''try square'') [[Anschlagwinkel]] ''m'', (''T-square'') [[Zeichenschiene]] ''f''; (3): [[Platz]] ''m''; (4): Quadrat ''n''; (5): [[Spießer]] ''m''
+*Greek: ([[plateia]])
 *Interlingua: (1): [[quadrato]]; (2): [[esquadra]]; (3): [[placia]]; (6): [[conventional]], [[conservator]]
 *{{ga}}: [[cearnóg]]
 *Italian: (1): [[quadrato]] ''m''; (3): [[piazza#Italian|piazza]] ''f''; (4): quadrato ''m''
