--- a/wiki/amethystos.wikitext
+++ b/wiki/amethystos.wikitext
@@ -1,8 +1,9 @@
 ==Latin==
 ===Other Forms===
 *[[amethystus]]
-===Etymoloy===
+===Etymology===
 From Greek [[ἀμέθυστος]].
+
 ===Noun===
 '''amethystos''' ''f'' ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
 
