--- a/wiki/amethystus.wikitext
+++ b/wiki/amethystus.wikitext
@@ -1,7 +1,7 @@
 ==Latin==
 ===Other Forms===
 *[[amethystos]]
-===Etymoloy===
+===Etymology===
 From Greek [[ἀμέθυστος]].
 ===Noun===
 '''amethystus''' ''f'' ''[[Wiktionary Appendix:Latin second declension|2nd declension]]''
