--- a/wiki/acrogen.wikitext
+++ b/wiki/acrogen.wikitext
@@ -4,3 +4,5 @@ Greek extreme, high + -gen
 *''(Botany):'' A plant of the highest class of [[cryptogram]]s, including the [[fern]]s, etc. See [[cryptogamia]]. 
 ===Derived terms===
 *'''The Age of Acrogens''', ''(Geology):'' the age of coal plants, or the [[carboniferous]] era.
+
+[[Category:Botany]] [[Category:Geology]]
