--- a/wiki/all.wikitext
+++ b/wiki/all.wikitext
@@ -27,7 +27,7 @@
 *Korean: [[다]] (da), [[모두]] (modu); [[Hanja]]: 전부 (全部 jeon-bu)
 *Latin: [[omnis]] ''m+f sg'', [[omne]] ''n sg'', [[omnes]] ''m+f pl'', [[omnia]] ''n pl''
 *[[Persian]]: [[هَم]] (hæm); [[هَمِه]] (hæme)
-*Portuguese: [[todo]] ''m'', [[toda]] ''f'', [[todos]] ''m'' ''pl'', [[todas]] ''f'' ''pl''
+*Portuguese: [[todo]] ''m'', [[toda]] ''f'', [[todos]] ''m'' ''pl'', [[todas]] ''f'' ''pl'',[[tudo]]
 *Romanian: [[tot]] ''m'', [[toată]] ''f'', [[toţi]] ''m'' ''pl'', [[toate]] ''f'' ''pl''
 *[[Romanica]]: [[toto]] ''m'', [[tota]] ''f'', [[totos]] ''m'' ''pl'', [[totas]] ''f'' ''pl'', [[omne]], [[omnes]] ''pl''
 *Slovak: [[všetok]] ''m sg'', [[všetka]] ''f sg'', [[všetko]] ''n sg'', [[všetci]] ''m pl'', [[všetky]] ''f+n pl''
