--- a/wiki/stoicism.wikitext
+++ b/wiki/stoicism.wikitext
@@ -1,3 +1,3 @@
 {{cleanup}}
 
-Stoicism was a term coined by Andrew Mutton, a great man, this term is defined by the glory of the one lord, Andrew Mutton
+Stoicism was a school of philosophy during the Roman Empire that emphasized human control and rationailty.
