--- a/wiki/fire.wikitext
+++ b/wiki/fire.wikitext
@@ -26,6 +26,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Arabic: [[نار]]
 *Chinese: [[火]] (huǒ)
 *Danish: [[ild]] ''c''
 *Dutch: [[vuur]] ''n''
@@ -99,6 +100,7 @@
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 <!--languages from A to I go here-->
+*Arabic: [[حريق]]
 *Dutch: [[brand]] ''m''
 *Finnish: [[tulipalo#Finnish|tulipalo]], [[palo#Finnish|palo]]
 *French: [[incendie]] ''f''
