<السلطة الوطنية الفلسطينية#39896>

--- a/wiki/%D8%A7%D9%84%D8%B3%D9%84%D8%B7%D8%A9_%D8%A7%D9%84%D9%88%D8%B7%D9%86%D9%8A%D8%A9_%D8%A7%D9%84%D9%81%D9%84%D8%B3%D8%B7%D9%8A%D9%86%D9%8A%D8%A9.wikitext
+++ b/wiki/%D8%A7%D9%84%D8%B3%D9%84%D8%B7%D8%A9_%D8%A7%D9%84%D9%88%D8%B7%D9%86%D9%8A%D8%A9_%D8%A7%D9%84%D9%81%D9%84%D8%B3%D8%B7%D9%8A%D9%86%D9%8A%D8%A9.wikitext
@@ -2,4 +2,4 @@
 '''السلطة الوطنية الفلسطينية'''
 
 ====Translations====
-*English: [[PLO]], [[Palestine Liberation Organisation]], [[Palestine Liberation Organization]]
+*English: [[PNO]], [[Palestine National Authority]]
