--- a/wiki/belluaire.wikitext
+++ b/wiki/belluaire.wikitext
@@ -5,18 +5,18 @@
 ==Etymology==
 From Latin [[bellua]] : wild beast, monster
 
+==noun==
 
 '''belluaire''' [belyair] ''m''
 
 ----
 
 *1. [[gladiator]] 
-*A man, often a slave or a prisoner, who fought wild beasts in a Roman amphitheater.
+*A strong man, often a slave or a prisoner, who fought wild beasts in a Roman amphitheater.
 
 
 *2. [[beastmaster]]
 *A character in video games who fights monsters and other creatures.
-
 
 ==Translation==
 
