--- a/wiki/belluaire.wikitext
+++ b/wiki/belluaire.wikitext
@@ -10,6 +10,8 @@ From Latin [[bellua]] : wild beast, monster
 '''belluaire''' [belyair] ''m''
 
 ----
+==English==
+
 
 *1. [[gladiator]] 
 *A strong man, often a slave or a prisoner, who fought wild beasts in a Roman amphitheater.
@@ -17,8 +19,6 @@ From Latin [[bellua]] : wild beast, monster
 
 *2. [[beastmaster]]
 *A character in video games who fights monsters and other creatures.
-
-
 
 ==Translation==
 
