--- a/wiki/belluaire.wikitext
+++ b/wiki/belluaire.wikitext
@@ -8,8 +8,9 @@ From Latin [[bellua]] : wild beast, monster
 ==noun==
 
 '''belluaire''' [belyair] ''m''
+*''gladiateur qui s'attaquait aux betes feroces dans un amphitheatre
+----''
 
-----
 ==English==
 
 
