--- a/wiki/belluaire.wikitext
+++ b/wiki/belluaire.wikitext
@@ -14,13 +14,12 @@ From Latin [[bellua]] : wild beast, monster
 ==English==
 
 
-*1. [[gladiator]] 
+1. [[gladiator]] 
 *A strong man, often a slave or a prisoner, who fought wild beasts in a Roman amphitheater.
 
 
-*2. [[beastmaster]]
+2. [[beastmaster]]
 *A character in video games who fights monsters and other creatures.
-
 
 ==Translation==
 
