--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -9,12 +9,12 @@
 *[[bestial]]
 *[[bestiary]]
 
-====Translations====
-*Chinese chracters: [[獸]], [[兽]]
+==Translations==
+*Chinese characters: [[獸]], [[兽]]
 *Chinese: [[四足兽]] (1), [[凶暴]][[而]][[残忍]]的人 (2)
 *Czech: [[zvíře]] ''n''
 *French: [[bête]] ''f'' (1)
-*German: [[Schelme]] ''f''
+*German: [[Biest]] ''n'', [[Tier]] ''n''
 *Italian: [[bestia]] ''f'' (1)
 *Japanese: [[獣]] ([[けもの]] ''kemono'', [[けだもの]] ''kedamono'')
 *Polish: [[bestia]] ''f''
