--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -1,5 +1,8 @@
 ==English==
-===Noun===
+==Etymology==
+From Latin [[bestia]] : animal, beast
+
+==Noun==
 '''beast'''
 #any [[animal]] other than a [[human]]; usually only applied to [[vertebrate]]s, sometimes excluding [[bird]]s.
 #a person who [[behave]]s in a violent, antisocial or uncivilised manner
