/* Related terms */ <beast#39179>

--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -7,10 +7,11 @@ From Latin [[bestia]] : animal, beast
 #any [[animal]] other than a [[human]]; usually only applied to [[vertebrate]]s, sometimes excluding [[bird]]s.
 #a person who [[behave]]s in a violent, antisocial or uncivilised manner
 
-====Related terms====
+==Related terms==
 *[[beastly]]
 *[[bestial]]
 *[[bestiary]]
+*[[beastmaster]]
 
 ==Translations==
 *Chinese characters: [[獸]], [[兽]]
