--- a/wiki/beast.wikitext
+++ b/wiki/beast.wikitext
@@ -1,30 +1,62 @@
 ==English==
-==Etymology==
+===Etymology===
 From Latin [[bestia]] : animal, beast
 
-==Noun==
+===Noun===
 '''beast'''
 #any [[animal]] other than a [[human]]; usually only applied to [[vertebrate]]s, sometimes excluding [[bird]]s.
 #a person who [[behave]]s in a violent, antisocial or uncivilised manner
 
-==Related terms==
+====Related terms====
 *[[beastly]]
 *[[bestial]]
 *[[bestiary]]
 *[[beastmaster]]
 
-==Translations==
+====Translations====
+'''animal, vertebrate'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Chinese: [[四足兽]]
+*Finnish: [[peto]]
+*French: [[bête]] ''f''
+*Italian: [[bestia]] ''f''
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+*Spanish: [[bestia]] ''f''
+|}
+|}
+
+'''violent/antisocial human'''
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Chinese: [[凶暴]][[而]][[残忍]]的人
+*Finnish: [[hirviö]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
+
+'''Translations to be checked'''
 *Chinese characters: [[獸]], [[兽]]
-*Chinese: [[四足兽]] (1), [[凶暴]][[而]][[残忍]]的人 (2)
 *Czech: [[zvíře]] ''n''
-*French: [[bête]] ''f'' (1)
 *German: [[Biest]] ''n'', [[Tier]] ''n''
-*Italian: [[bestia]] ''f'' (1)
 *Japanese: [[獣]] ([[けもの]] ''kemono'', [[けだもの]] ''kedamono'')
 *Polish: [[bestia]] ''f''
 *[[Russian]]: [[зверь]]
 *Slovak: [[zver]] ''f/m'', [[zviera]] ''n'', [[šelma]] ''f''
-*Spanish: [[bestia]] ''f'' (1)
 
-==Associations==
+====Associations====
 *[[Russian]]: the [[beast]] зубаст ([[sharp]]-toothed)
