removed double pronounciation <fire#6856>

--- a/wiki/fire.wikitext
+++ b/wiki/fire.wikitext
@@ -3,11 +3,6 @@
 *(''British'', ''Australian'') fīə(r), /faɪə(r)/, /faI@(r)/
 *(''US'') fīr, /faɪr/, /faIr/
 
-==English==
-=== Pronunciation ===
-*(''British'', ''Australian'') fīə(r), /faɪə(r)/, /faI@(r)/
-*(''US'') fīr, /faɪr/, /faIr/
-
 === Noun ===
 '''fire''' (''[[uncountable]] and [[countable]]''; ''plural'' '''[[fires]]''')
 
@@ -124,7 +119,7 @@
 <!--languages from A to I go here-->
 *Danish: 
 *Dutch: 
-*Finnish: 
+*Finnish: [[hella]]
 *French: 
 *Frisian: 
 *German: 
