--- a/wiki/troll.wikitext
+++ b/wiki/troll.wikitext
@@ -9,3 +9,18 @@
 '''troll'''
 
 #A supernatural being, often represented as of diminutive size, but sometimes as a giant, and fabled to inhabit caves, hills, and like places; a witch.
+
+====Translations====
+{| border=0 width=100%
+|-
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from A to I go here-->
+*Finnish: [[trolli]]
+|}
+| width=1% |
+|bgcolor="#FFFFE0" valign=top width=48%|
+{|
+<!--languages from J to Z go here-->
+|}
+|}
