--- a/wiki/castling.wikitext
+++ b/wiki/castling.wikitext
@@ -1,6 +1,6 @@
 ==English==
 === Pronunciation ===
-*[[w:IPA|IPA]]: /'kɑstlɪŋ/<!-- is the "t" really pronounced? -->
+*[[w:IPA|IPA]]: /ˈ kɑːs(ə)lɪŋ/
 
 ===Noun===
 '''castling'''
