--- a/wiki/censorware.wikitext
+++ b/wiki/censorware.wikitext
@@ -6,7 +6,7 @@
 ===Noun===
 '''censorware'''
 
-#Software used to filter content on the Internet.  Content filtering software.
+#Software used to filter content on the Internet or block Internet access.  Content filtering software.
 
 ===Translations===
 *Vietnamese: [[đồ]] [[kiểm duyệt]]
