--- a/wiki/%E8%BD%A6.wikitext
+++ b/wiki/%E8%BD%A6.wikitext
@@ -19,11 +19,11 @@
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
-*** '''[[Pinyin]]''': chē (che1)
+*** '''[[Pinyin]]''': chē (che1), jū (ju1)
 *** '''[[Wade-Giles]]''': ch'e<sup>1</sup>
 *** '''[[Yale]]''': 
 ** '''[[Cantonese]]'''
@@ -33,6 +33,11 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[車]]
+
+===Noun===
+
+#(chē) [[vehicle]]
+#(jū, ''xiangqi, chess'') [[rook]]
 
 * '''Other info''': 
 
