--- a/wiki/v%C6%B0%C6%A1ng.wikitext
+++ b/wiki/v%C6%B0%C6%A1ng.wikitext
@@ -1,12 +1,9 @@
-=Vietnamese=
+==Vietnamese==
+===Noun===
+[[王]]
+#[[king]]
+#[[prince]]
 
-==Noun==
-
-===Translation===
-
-*[[king]]
-*[[prince]]
-
-===Related words===
+===Related terms===
 
 *[[vua]]
